# Personal-Finance-Tracker

./: pyproject.toml
data/: finance.db
personal_finance_tracker/: cli.py
src/finance_tracker/: cli.py  database.py  model.py  storage.py
tests/: conftest.py  test_model.py  test_storage.py
