[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = 'Personal Finance Tracker'
version = "0.1.0"
description = "A CLI app used to track your personal finances"
authors= [ {name = "Edu Lukmon"},
    {email = "edulukmon@gmail.com"}]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
